Fix swagger docs
